# sump-surfer

./: .gitmodules  README.md
docs/: SUMP3_COMPLETE_TECHNICAL_REFERENCE.md
rtl/: sump3_axi_wrapper.sv
software/sump-server/: Cargo.toml  build.rs
software/sump-server/.cargo/: config.toml
software/sump-server/src/: devmem.rs  ila.rs  main.rs
software/sump-server/static/: index.html
tests/: CMakeLists.txt  build.sh  tb_main.cpp
tests/rtl/: simple_dut.sv  sump3_synth_stubs.v  tb_top.sv
